hw_6: extract getList() to subclasses, add sorting in getAllSorted()